UI fix : button and text alignment

--- a/ui.frontend/src/main/webpack/styles/__projectcontainer.scss
+++ b/ui.frontend/src/main/webpack/styles/__projectcontainer.scss
@@ -42,7 +42,7 @@
         }
         .dark-btn-grey{
             .cmp-button{
-                width: 198px;
+                width: 205px;
                 .cmp-button__text{
                     margin: auto 25px auto 20px;
                 }
